<package>
  <name>vulcano_base_gazebo</name>
  <version>1.0.0</version>
  <description>
		Launch files and world files to start the models in gazebo
	</description>
  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>

  <author email="info@robotnik.es">Robotnik</author>
    
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>vulcano_base_description</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>  
  <run_depend>hector_gazebo</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>vulcano_base_description</run_depend> 
  <run_depend>vulcano_base_control</run_depend>  

  <export>
	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
  
</package>
