<?xml version="1.0"?>
<package>
  <name>vulcano_torso_gazebo</name>
  <version>1.1.6</version>
  <description>
      Gazebo wrapper for the Universal UR5/10 robot arms.
  </description>


  <author>Marc Bosch-Jorge</author>
  <author email="mbosch@robotnik.es">Marc Bosch-Jorge</author>
  <maintainer email="mbosch@robotnik.es">Marc Bosch-Jorge</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/vulcano_torso_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>vulcano_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>


  <export>
  </export>
</package>
